--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,9 @@
 .flower{
-    max-width: 400px;
+    max-width: 100px;
 }
 .flower-rotate{
     transform: rotate(30deg);
+}
+.input{
+    border-color: #ae7000;
 }
